http_server_disable_special

--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -498,7 +498,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Ignore follow items when writing primary reference.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikisource.org/wiki/Page:Writings_of_Saint_Patrick,_Apostle_of_Ireland.djvu/154">https://en.wikisource.org/wiki/Page:Writings_of_Saint_Patrick,_Apostle_of_Ireland.djvu/154</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikisource.org/wiki/Page:Writings_of_Saint_Patrick,_Apostle_of_Ireland.djvu/154" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Page:Writings_of_Saint_Patrick,_Apostle_of_Ireland.djvu/154</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/555" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/555</a>
@@ -1387,7 +1387,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Terminate comment if new-line found.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikisource.org/wiki/Three_Villages/2_Shirley">https://en.wikisource.org/wiki/Three_Villages/2_Shirley</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikisource.org/wiki/Three_Villages/2_Shirley" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Three_Villages/2_Shirley</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/437" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/437</a>
@@ -2203,7 +2203,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Treat keywords as caption if not File namespace or if keyless.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikibooks.org/wiki/C_Sharp_Programming">https://en.wikibooks.org/wiki/C_Sharp_Programming</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikibooks.org/wiki/C_Sharp_Programming" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/C_Sharp_Programming</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/303" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/303</a>
