--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -264,7 +264,7 @@
         (change) File/v2: Video thumbnails don't always show. See: <a href="/site/en.wikipedia.org/wiki/Echidna">http://en.wikipedia.org/wiki/Echidna</a> <a href="/site/en.wikipedia.org/wiki/WWI">http://en.wikipedia.org/wiki/WWI</a>
       </li>
       <li>
-        (change) Html: [[File:A.png|frame]] should be rendered as thumb; EX:File:A.png|frame. See: <a href="/site/en.wikibooks.org/wiki/Wikijunior:Solar_System/Mercury">http://en.wikibooks.org/wiki/Wikijunior:Solar_System/Mercury</a>
+        (change) Html: [[File:A.png|frame]] should be rendered as thumb; EX:File:A.png|frame. See: <a href="http://en.wikibooks.org/wiki/Wikijunior:Solar_System/Mercury" rel="nofollow" class="external free">http://en.wikibooks.org/wiki/Wikijunior:Solar_System/Mercury</a>
       </li>
       <li>
         (change) Messages: Updated latest messages from extensions; EX:Cite;Disambiguator;ImageMap;ParserFunctions;Poem;Scribunto;Wikibase;Wikieditor;WikimediaMessages;.
@@ -299,7 +299,7 @@
         (add) Package: English Wikiversity 2013-12-16 offline package.
       </li>
       <li>
-        (add) DynamicPageList: Improved support for wikibooks, wikiversity, wikinews. See: <a href="/site/en.wikibooks.org/wiki/Subject:Computer_programming">http://en.wikibooks.org/wiki/Subject:Computer_programming</a>
+        (add) DynamicPageList: Improved support for wikibooks, wikiversity, wikinews. See: <a href="http://en.wikibooks.org/wiki/Subject:Computer_programming" rel="nofollow" class="external free">http://en.wikibooks.org/wiki/Subject:Computer_programming</a>
       </li>
       <li>
         (change) Scribunto: Gsub_match_callback should return integer positions as strings, not integers; EX:{{#invoke:Biblio|ouvrage}} . See: <a href="/site/fr.wikipedia.org/wiki/Atoum">http://fr.wikipedia.org/wiki/Atoum</a>
@@ -310,10 +310,10 @@
     </p>
     <ul>
       <li>
-        (fix) [broken since:v0.11.3] Parser: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c d" -&gt; a = "'b'c d". See: <a href="/site/en.wikisource.org/wiki/Grimm%27s_Household_Tales,_Volume_1">http://en.wikisource.org/wiki/Grimm's_Household_Tales,_Volume_1</a> <a href="/site/en.wikisource.org/wiki/Alice%27s_Adventures_in_Wonderland">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
+        (fix) [broken since:v0.11.3] Parser: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c d" -&gt; a = "'b'c d". See: <a href="http://en.wikisource.org/wiki/Grimm's_Household_Tales,_Volume_1" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Grimm's_Household_Tales,_Volume_1</a> <a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
       </li>
       <li>
-        (fix) [broken since:v0.12.2] Parser: Malformed table can cause page to fail (rare); EX:&lt;div&gt;a{|\n|!. See: <a href="/site/en.wikisource.org/wiki/Page:A_Basic_Guide_to_Open_Educational_Resources.pdf/99">http://en.wikisource.org/wiki/Page:A_Basic_Guide_to_Open_Educational_Resources.pdf/99</a>
+        (fix) [broken since:v0.12.2] Parser: Malformed table can cause page to fail (rare); EX:&lt;div&gt;a{|\n|!. See: <a href="http://en.wikisource.org/wiki/Page:A_Basic_Guide_to_Open_Educational_Resources.pdf/99" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Page:A_Basic_Guide_to_Open_Educational_Resources.pdf/99</a>
       </li>
       <li>
         (change) File/v2: Images with thumbtimes do not show. See: <a href="/site/en.wikipedia.org/wiki/World_War_I">http://en.wikipedia.org/wiki/World_War_I</a>
@@ -346,7 +346,7 @@
         (change) Parser: Unknown xml tags should show as &lt;unknown&gt;&lt;/unknown&gt; not &lt;unknown&gt;&lt;unknown&gt;. See: <a href="http://wikimediafoundation.org" rel="nofollow" class="external free">http://wikimediafoundation.org</a>
       </li>
       <li>
-        (change) Parser: {{#titleparts}} handles negative begin properly; EX:{{#titleparts:A/b|-1|-2}} -&gt; A. See: <a href="/site/en.wikisource.org/wiki/Wikisource:Requests_for_comment/Annotations_and_derivative_works">http://en.wikisource.org/wiki/Wikisource:Requests_for_comment/Annotations_and_derivative_works</a>
+        (change) Parser: {{#titleparts}} handles negative begin properly; EX:{{#titleparts:A/b|-1|-2}} -&gt; A. See: <a href="http://en.wikisource.org/wiki/Wikisource:Requests_for_comment/Annotations_and_derivative_works" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Wikisource:Requests_for_comment/Annotations_and_derivative_works</a>
       </li>
       <li>
         (add) Parser: Added {{#xowa}} for home_wiki.
@@ -504,7 +504,7 @@
         (change) Html: Anonymous and Talk links in upper left hand corner suppressed; EX:/xowa/xowa.gfs.
       </li>
       <li>
-        (change) File: Wikinews should prioritize local over remote for images. See: <a href="http://en.wikinews.org/wiki/Endangered_'Asian_unicorn'_sighted" rel="nofollow" class="external free">http://en.wikinews.org/wiki/Endangered_'Asian_unicorn'_sighted</a>
+        (change) File: Wikinews should prioritize local over remote for images. See: <a href="/site/en.wikinews.org/wiki/Endangered_%27Asian_unicorn%27_sighted">http://en.wikinews.org/wiki/Endangered_'Asian_unicorn'_sighted</a>
       </li>
       <li>
         (change) Category: Error should not cause page to stop loading.
@@ -579,7 +579,7 @@
         (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia" id="xolnki_12" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
-        (fix) [broken since:v0.4.4] Xnde: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c" -&gt; a = "bc". See: <a href="/site/en.wikisource.org/wiki/Alice%27s_Adventures_in_Wonderland">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
+        (fix) [broken since:v0.4.4] Xnde: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c" -&gt; a = "bc". See: <a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
       </li>
     </ul>
     <p>
@@ -1308,7 +1308,7 @@
         (done) Import: species wiki was not downloading from Import/Script page {detected by hidp123}.
       </li>
       <li>
-        (done) Interwiki: Added wikiversity alias; EX:[[wikiversity:]] {detected by hidp123}. See: <a href="/site/en.wikisource.org/wiki/">http://en.wikisource.org/</a>
+        (done) Interwiki: Added wikiversity alias; EX:[[wikiversity:]] {detected by hidp123}. See: <a href="http://en.wikisource.org/" rel="nofollow" class="external free">http://en.wikisource.org/</a>
       </li>
       <li>
         (done) Wikidata: Special:ItemByTitle was not handling spaces and other url-encoded values {detected by Schnark}. See: www.wikidata.org/wiki/Special:ItemByTitle?site=enwiki&amp;page=Albert+Einstein&amp;submit=Search
@@ -1369,7 +1369,7 @@
         (add) Wikidata: Special:ItemByTitle implemented {requested by Schnark}. See: <a href="/site/www.wikidata.org/wiki/Special:ItemByTitle">http://www.wikidata.org/wiki/Special:ItemByTitle</a>
       </li>
       <li>
-        (add) Special: Special:RandomRootPage available {requested by Miles}. See: <a href="/site/en.wikisource.org/wiki/Special:RandomRootPage/Main">http://en.wikisource.org/wiki/Special:RandomRootPage/Main</a>
+        (add) Special: Special:RandomRootPage available {requested by Miles}. See: <a href="http://en.wikisource.org/wiki/Special:RandomRootPage/Main" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Special:RandomRootPage/Main</a>
       </li>
       <li>
         (add) Special: Special:Random/Author and Speciale:PaginaCasuale/Autore available. See: <a href="http://it.wikisource.org/wiki/Speciale:PaginaCasuale/Autore" rel="nofollow" class="external free">http://it.wikisource.org/wiki/Speciale:PaginaCasuale/Autore</a>
@@ -1471,7 +1471,7 @@
         (fix) Parser: {{PAGENAME}} sometimes defaults incorrectly to "Main Page". See: <a href="http://www.mediawiki.org" rel="nofollow" class="external free">http://www.mediawiki.org</a>
       </li>
       <li>
-        (fix) Html: Wikivoyage links on main page should be white {assisted by Schnark}. See: <a href="/site/en.wikivoyage.org/wiki/">http://en.wikivoyage.org</a>
+        (fix) Html: Wikivoyage links on main page should be white {assisted by Schnark}. See: <a href="http://en.wikivoyage.org" rel="nofollow" class="external free">http://en.wikivoyage.org</a>
       </li>
       <li>
         (fix) Sqlite: Search suggest is slow when using for large databases.
