--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -1664,7 +1664,7 @@
         SWT: Update SWT to v4.5 (affects printing not working); EX:/bin/your_os_name/swt/. See: <a href="http://xowa.org/home/wiki/Dev/SWT" id="xolnki_28" title="Dev/SWT">Dev/SWT</a>
       </li>
       <li>
-        XULRunner: Update XULRunner to version 31 (version 24 on Linux) (affects minor formatting issues on a small number of pages; wikis not downloading on some linux distros). See: <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser" id="xolnki_29" title="App/UI/HTML Browser">App/UI/HTML_Browser</a> <a href="/site/en.wikisource.org/wiki/Lubbers_Don%27t_Live">https://en.wikisource.org/wiki/Lubbers_Don't_Live</a>!
+        XULRunner: Update XULRunner to version 31 (version 24 on Linux) (affects minor formatting issues on a small number of pages; wikis not downloading on some linux distros). See: <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser" id="xolnki_29" title="App/UI/HTML Browser">App/UI/HTML_Browser</a> <a href="https://en.wikisource.org/wiki/Lubbers_Don't_Live" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Lubbers_Don't_Live</a>!
       </li>
     </ul>
     <p>
@@ -1910,7 +1910,7 @@
     </p>
     <ul>
       <li>
-        ParserFunctions: Handle {{ns:-1}} for Special namespace (affects Random work and Random author not working in en.s) {detected by and0r}. See: <a href="/site/en.wikisource.org/wiki/">https://en.wikisource.org</a>
+        ParserFunctions: Handle {{ns:-1}} for Special namespace (affects Random work and Random author not working in en.s) {detected by and0r}. See: <a href="https://en.wikisource.org" rel="nofollow" class="external free">https://en.wikisource.org</a>
       </li>
     </ul>
     <p>
@@ -2108,10 +2108,10 @@
         Wikisource: Update Page / Index namespaces for all wikisource pages (affects non-English wikisource pages not showing content (9 in ko.s)) {detected by gnosygnu.build.warning}. See: <a href="https://ko.wikisource.org/wiki/님의_노래" rel="nofollow" class="external free">https://ko.wikisource.org/wiki/님의_노래</a> <a href="https://ko.wikisource.org/wiki/삼국유사/권제1" rel="nofollow" class="external free">https://ko.wikisource.org/wiki/삼국유사/권제1</a> <a href="https://ko.wikisource.org/wiki/삼국사기/권34" rel="nofollow" class="external free">https://ko.wikisource.org/wiki/삼국사기/권34</a> <a href="https://ko.wikisource.org/wiki/단군론" rel="nofollow" class="external free">https://ko.wikisource.org/wiki/단군론</a>
       </li>
       <li>
-        Indicator: Ignore multiple indicators (affects many en.s showing multiple icons in top-right hand corner) {detected by gnosygnu.gui}. See: <a href="/site/en.wikisource.org/wiki/The_Parochial_System_(Wilberforce,_1838)">https://en.wikisource.org/wiki/The_Parochial_System_(Wilberforce,_1838)</a>
+        Indicator: Ignore multiple indicators (affects many en.s showing multiple icons in top-right hand corner) {detected by gnosygnu.gui}. See: <a href="https://en.wikisource.org/wiki/The_Parochial_System_(Wilberforce,_1838)" rel="nofollow" class="external free">https://en.wikisource.org/wiki/The_Parochial_System_(Wilberforce,_1838)</a>
       </li>
       <li>
-        Indicator: Do not show indicators from &lt;page&gt; (affects many en.s mainspace pages showing unnecessary indicators) {detected by gnosygnu.gui}. See: <a href="/site/en.wikisource.org/wiki/The_Parochial_System_(Wilberforce,_1838)">https://en.wikisource.org/wiki/The_Parochial_System_(Wilberforce,_1838)</a> <a href="/site/en.wikisource.org/wiki/Index:The_Parochial_System_(Wilberforce,_1838).djvu">https://en.wikisource.org/wiki/Index:The_Parochial_System_(Wilberforce,_1838).djvu</a>
+        Indicator: Do not show indicators from &lt;page&gt; (affects many en.s mainspace pages showing unnecessary indicators) {detected by gnosygnu.gui}. See: <a href="https://en.wikisource.org/wiki/The_Parochial_System_(Wilberforce,_1838)" rel="nofollow" class="external free">https://en.wikisource.org/wiki/The_Parochial_System_(Wilberforce,_1838)</a> <a href="https://en.wikisource.org/wiki/Index:The_Parochial_System_(Wilberforce,_1838).djvu" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Index:The_Parochial_System_(Wilberforce,_1838).djvu</a>
       </li>
       <li>
         Javascript: Add TitleRewrite gadget (affects several pt.s pages showing h1 tag in body of text) {detected by anonymous}. See: <a href="https://pt.wikisource.org/wiki/Autor:Florbela_Espanca" rel="nofollow" class="external free">https://pt.wikisource.org/wiki/Autor:Florbela_Espanca</a>
@@ -2148,10 +2148,10 @@
         Language: Add new language code: awa (affects none); {detected by gnosygnu.lang.warning}.
       </li>
       <li>
-        Wikisource: Ignore \n at end of "to" page number (affects 3 en.s pages not showing content); EX:&lt;pages to="123\n"/&gt; {detected by gnosygnu.build.warning}. See: <a href="/site/en.wikisource.org/wiki/1911_Encyclop%C3%A6dia_Britannica/Boissier,_Marie_Louis_Antoine_Gaston">https://en.wikisource.org/wiki/1911_Encyclop%C3%A6dia_Britannica/Boissier,_Marie_Louis_Antoine_Gaston</a> <a href="/site/en.wikisource.org/wiki/1911_Encyclop%C3%A6dia_Britannica/Boissonade_de_Fontarabie,_Jean_Fran%C3%A7ois">https://en.wikisource.org/wiki/1911_Encyclopædia_Britannica/Boissonade_de_Fontarabie,_Jean_François</a> <a href="/site/en.wikisource.org/wiki/1911_Encyclop%C3%A6dia_Britannica/Boissy_d%27Anglas,_Fran%C3%A7ois_Antoine_de">https://en.wikisource.org/wiki/1911_Encyclopædia_Britannica/Boissy_d'Anglas,_François_Antoine_de</a>
+        Wikisource: Ignore \n at end of "to" page number (affects 3 en.s pages not showing content); EX:&lt;pages to="123\n"/&gt; {detected by gnosygnu.build.warning}. See: <a href="https://en.wikisource.org/wiki/1911_Encyclop%C3%A6dia_Britannica/Boissier,_Marie_Louis_Antoine_Gaston" rel="nofollow" class="external free">https://en.wikisource.org/wiki/1911_Encyclop%C3%A6dia_Britannica/Boissier,_Marie_Louis_Antoine_Gaston</a> <a href="https://en.wikisource.org/wiki/1911_Encyclopædia_Britannica/Boissonade_de_Fontarabie,_Jean_François" rel="nofollow" class="external free">https://en.wikisource.org/wiki/1911_Encyclopædia_Britannica/Boissonade_de_Fontarabie,_Jean_François</a> <a href="https://en.wikisource.org/wiki/1911_Encyclopædia_Britannica/Boissy_d'Anglas,_François_Antoine_de" rel="nofollow" class="external free">https://en.wikisource.org/wiki/1911_Encyclopædia_Britannica/Boissy_d'Anglas,_François_Antoine_de</a>
       </li>
       <li>
-        Wikisource: Ignore TOOLBOXEND in sidebar (affects unnecessary log messages) {detected by gnosygnu.gui}. See: <a href="/site/en.wikisource.org/wiki/Main_Page">https://en.wikisource.org/wiki/Main_Page</a>
+        Wikisource: Ignore TOOLBOXEND in sidebar (affects unnecessary log messages) {detected by gnosygnu.gui}. See: <a href="https://en.wikisource.org/wiki/Main_Page" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Main_Page</a>
       </li>
     </ul>
     <p>
@@ -2812,10 +2812,10 @@
     </p>
     <ul>
       <li>
-        Parser.Xml: Invalidate xml attribute if last attribute and dangling (affects 14 en.s page showing script error); EX:&lt;pages to=&gt; -&gt; invalid x&gt; &lt;pages to&gt;. See: <a href="/site/en.wikisource.org/wiki/The_Nether_World/Chapter_5">https://en.wikisource.org/wiki/The_Nether_World/Chapter_5</a> <a href="/site/en.wikisource.org/wiki/Notes_by_the_Way/Chapter_2">https://en.wikisource.org/wiki/Notes_by_the_Way/Chapter_2</a> -&gt; <a href="/site/en.wikisource.org/wiki/Notes_by_the_Way/Chapter_14">https://en.wikisource.org/wiki/Notes_by_the_Way/Chapter_14</a>
+        Parser.Xml: Invalidate xml attribute if last attribute and dangling (affects 14 en.s page showing script error); EX:&lt;pages to=&gt; -&gt; invalid x&gt; &lt;pages to&gt;. See: <a href="https://en.wikisource.org/wiki/The_Nether_World/Chapter_5" rel="nofollow" class="external free">https://en.wikisource.org/wiki/The_Nether_World/Chapter_5</a> <a href="https://en.wikisource.org/wiki/Notes_by_the_Way/Chapter_2" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Notes_by_the_Way/Chapter_2</a> -&gt; <a href="https://en.wikisource.org/wiki/Notes_by_the_Way/Chapter_14" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Notes_by_the_Way/Chapter_14</a>
       </li>
       <li>
-        Poem: Check for out of bounds error when dangling poem has dangling comment (affects 1 en.s page failing to load). See: <a href="/site/en.wikisource.org/wiki/The_Hebrew_Nation_did_not_write_it">https://en.wikisource.org/wiki/The_Hebrew_Nation_did_not_write_it</a>
+        Poem: Check for out of bounds error when dangling poem has dangling comment (affects 1 en.s page failing to load). See: <a href="https://en.wikisource.org/wiki/The_Hebrew_Nation_did_not_write_it" rel="nofollow" class="external free">https://en.wikisource.org/wiki/The_Hebrew_Nation_did_not_write_it</a>
       </li>
     </ul>
     <p>
