--- a/home/wiki/Change_log/2016.html
+++ b/home/wiki/Change_log/2016.html
@@ -975,7 +975,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: If {{#pagebanner}} and __TOC__ are on same page, do not have __TOC__ overwrite {{#pagebanner}}.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/UNESCO_World_Heritage_List">https://en.wikivoyage.org/wiki/UNESCO_World_Heritage_List</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/UNESCO_World_Heritage_List" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/UNESCO_World_Heritage_List</a>
       </dd>
     </dl>
     <ul>
@@ -988,7 +988,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Always reload page when going back / forward on wikinews (do not use cached html).
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki" rel="nofollow" class="external free">https://en.wikinews.org/wiki</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/">https://en.wikinews.org/wiki</a>
       </dd>
     </dl>
     <ul>
@@ -1170,7 +1170,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Implement entity for renderSnak.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/Montenegro">https://en.wikivoyage.org/wiki/Montenegro</a> <a href="/site/en.wikivoyage.org/wiki/Mongolia">https://en.wikivoyage.org/wiki/Mongolia</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Montenegro" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Montenegro</a> <a href="https://en.wikivoyage.org/wiki/Mongolia" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Mongolia</a>
       </dd>
     </dl>
     <ul>
@@ -1183,7 +1183,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Hide markup from mapframe / maplink tags.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/London">https://en.wikivoyage.org/wiki/London</a> <a href="/site/en.wikivoyage.org/wiki/Paris">https://en.wikivoyage.org/wiki/Paris</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/London" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/London</a> <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a>
       </dd>
     </dl>
     <ul>
@@ -1227,7 +1227,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Reuse quantity.unit code for renderSnake.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/Mongolia">https://en.wikivoyage.org/wiki/Mongolia</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Mongolia" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Mongolia</a>
       </dd>
     </dl>
     <ul>
@@ -1240,7 +1240,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Ignore assessment function tag.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/Mongolia">https://en.wikivoyage.org/wiki/Mongolia</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Mongolia" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Mongolia</a>
       </dd>
     </dl>
     <ul>
@@ -1253,7 +1253,7 @@
         <span style='font-variant:small-caps'>Example</span>: category={{{2}}}.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a>
       </dd>
     </dl>
     <ul>
@@ -1263,7 +1263,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a>
       </dd>
     </dl>
     <ul>
@@ -1312,7 +1312,7 @@
         <span style='font-variant:small-caps'>Example</span>: Armenica_Ani_map.gif/250px.png.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/Ani">https://en.wikivoyage.org/wiki/Ani</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Ani" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Ani</a>
       </dd>
     </dl>
     <ul>
@@ -1340,7 +1340,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikibooks.org/wiki/Algorithms">https://en.wikibooks.org/wiki/Algorithms</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikibooks.org/wiki/Algorithms" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/Algorithms</a>
       </dd>
     </dl>
     <ul>
@@ -1350,7 +1350,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a> <a href="https://en.wikinews.org/wiki/Template:Topic_cat/latest" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Template:Topic_cat/latest</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a> <a href="/site/en.wikinews.org/wiki/Template:Topic_cat/latest">https://en.wikinews.org/wiki/Template:Topic_cat/latest</a>
       </dd>
     </dl>
     <ul>
@@ -1833,7 +1833,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikibooks.org/wiki/Subject:XML">https://en.wikibooks.org/wiki/Subject:XML</a> <a href="/site/en.wikibooks.org/wiki/Subject:Religion">https://en.wikibooks.org/wiki/Subject:Religion</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikibooks.org/wiki/Subject:XML" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/Subject:XML</a> <a href="https://en.wikibooks.org/wiki/Subject:Religion" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/Subject:Religion</a>
       </dd>
     </dl>
     <ul>
@@ -2721,7 +2721,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Support "renderSnak".
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/Wikivoyage:Travellers%27_pub">https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub</a>
       </dd>
     </dl>
     <h3>
@@ -2914,7 +2914,7 @@
     </ul>
     <dl>
       <dd>
-        Links: <a href="/site/en.wikivoyage.org/wiki/Paris">https://en.wikivoyage.org/wiki/Paris</a>
+        Links: <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a>
       </dd>
     </dl>
     <p>
@@ -3481,7 +3481,7 @@
         <span style='font-variant:small-caps'>Example</span>: key="a'b" x&gt; key="a".
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikisource.org/wiki/The_formative_period_in_Colby%27s_history">https://en.wikisource.org/wiki/The_formative_period_in_Colby's_history</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikisource.org/wiki/The_formative_period_in_Colby's_history" rel="nofollow" class="external free">https://en.wikisource.org/wiki/The_formative_period_in_Colby's_history</a>
       </dd>
     </dl>
     <ul>
@@ -4876,7 +4876,7 @@
         Core: Parse decimals using US locale, not user locale. Resolves extremely wide pie charts on many de.w pages. {detected by markusmaresch} See: <a href="/site/de.wikipedia.org/wiki/Hausmannst%C3%A4tten">https://de.wikipedia.org/wiki/Hausmannstätten</a>
       </li>
       <li>
-        Xtn.Pgbnr: Add {{PAGEBANNER}} extension. Resolves pagebanner not showing up on top of wikivoyage pages. See: <a href="/site/en.wikivoyage.org/wiki/Stonehenge">https://en.wikivoyage.org/wiki/Stonehenge</a> <a href="/site/en.wikivoyage.org/wiki/Paris">https://en.wikivoyage.org/wiki/Paris</a> <a href="/site/en.wikivoyage.org/wiki/Munich">https://en.wikivoyage.org/wiki/Munich</a> <a href="/site/en.wikivoyage.org/wiki/Cumbernauld">https://en.wikivoyage.org/wiki/Cumbernauld</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All" id="xolnki_66" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
+        Xtn.Pgbnr: Add {{PAGEBANNER}} extension. Resolves pagebanner not showing up on top of wikivoyage pages. See: <a href="https://en.wikivoyage.org/wiki/Stonehenge" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Stonehenge</a> <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a> <a href="https://en.wikivoyage.org/wiki/Munich" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Munich</a> <a href="https://en.wikivoyage.org/wiki/Cumbernauld" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Cumbernauld</a> <a href="http://xowa.org/home/wiki/Diagnostics/Xtns/Wikivoyage/All" id="xolnki_66" title="Diagnostics/Xtns/Wikivoyage/All">Diagnostics/Xtns/Wikivoyage/All</a>
       </li>
     </ul>
     <p>
@@ -4887,7 +4887,7 @@
         Css: Remove from core.css #content a:link {color: #0645ad;}. Resolves wikivoyage banner links showing in blue instead of white. See: <a href="/site/en.wikipedia.org/wiki/Stonehenge">https://en.wikipedia.org/wiki/Stonehenge</a>
       </li>
       <li>
-        Html: Add 'class="visible"' to content-sub node and 'client-js' to html node. Resolves extra gap at bottom of content-sub on wikivoyage pages. See: <a href="/site/en.wikivoyage.org/wiki/Stonehenge">https://en.wikivoyage.org/wiki/Stonehenge</a>
+        Html: Add 'class="visible"' to content-sub node and 'client-js' to html node. Resolves extra gap at bottom of content-sub on wikivoyage pages. See: <a href="https://en.wikivoyage.org/wiki/Stonehenge" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Stonehenge</a>
       </li>
     </ul>
     <p>
@@ -4975,7 +4975,7 @@
         Luaj: Handle multi-byte chars in lua variables (resolves script error on a few dozen en.d pages ("attempt to concatenate nil and string")). See: <a href="/site/en.wiktionary.org/wiki/%E3%81%A9%E3%81%86">https://en.wiktionary.org/wiki/どう</a> <a href="/site/en.wiktionary.org/wiki/%EB%A5%BC">https://en.wiktionary.org/wiki/를</a>
       </li>
       <li>
-        Hzip: Handle jtidy moving &lt;span class='headline'&gt; outside of &lt;h#&gt; tag in rare combination of &lt;center&gt;, &lt;span&gt;, &lt;div&gt; (resolves a few dozen pages in en.s not showing). See: <a href="/site/en.wikisource.org/wiki/On_the_Vital_Principle/Whole_text">https://en.wikisource.org/wiki/On_the_Vital_Principle/Whole_text</a> <a href="/site/en.wikisource.org/wiki/Avenarius_and_the_Standpoint_of_Pure_Experience/1">https://en.wikisource.org/wiki/Avenarius_and_the_Standpoint_of_Pure_Experience/1</a>
+        Hzip: Handle jtidy moving &lt;span class='headline'&gt; outside of &lt;h#&gt; tag in rare combination of &lt;center&gt;, &lt;span&gt;, &lt;div&gt; (resolves a few dozen pages in en.s not showing). See: <a href="https://en.wikisource.org/wiki/On_the_Vital_Principle/Whole_text" rel="nofollow" class="external free">https://en.wikisource.org/wiki/On_the_Vital_Principle/Whole_text</a> <a href="https://en.wikisource.org/wiki/Avenarius_and_the_Standpoint_of_Pure_Experience/1" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Avenarius_and_the_Standpoint_of_Pure_Experience/1</a>
       </li>
     </ul>
     <p>
@@ -4992,7 +4992,7 @@
         Xtns.Dpl: Write href using full_db not page_txt; EX:Category:A B -&gt; Category:A_B x&gt; A B. See: <a href="/site/en.wikiquote.org/wiki/Wikiquote:Speedy_deletions">https://en.wikiquote.org/wiki/Wikiquote:Speedy_deletions</a>
       </li>
       <li>
-        Xtns.Dpl: Encode quotes in href title (resolves broken links if page title has quotes). See: <a href="/site/en.wikibooks.org/wiki/Wikibooks:Alphabetical_classification/All_Books">https://en.wikibooks.org/wiki/Wikibooks:Alphabetical_classification/All_Books</a>
+        Xtns.Dpl: Encode quotes in href title (resolves broken links if page title has quotes). See: <a href="https://en.wikibooks.org/wiki/Wikibooks:Alphabetical_classification/All_Books" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/Wikibooks:Alphabetical_classification/All_Books</a>
       </li>
       <li>
         Dumps.HTML: Add support for non-english File namespace (resolves many log messages when generating html dumps for non-english wikis).
@@ -5155,7 +5155,7 @@
     </p>
     <ul>
       <li>
-        ParserFunctions: Handle &lt;refs&gt; inside {{#tag}} (affects incorrectly placed ref on 1 en.w page); EX:{{#tag:ref|&lt;ref&gt;a&lt;/ref&gt;b}}. See: <a href="/site/en.wikipedia.org/wiki/UK">https://en.wikipedia.org/wiki/UK</a> <a href="/site/en.wikisource.org/wiki/The_Canterville_Ghost">https://en.wikisource.org/wiki/The_Canterville_Ghost</a>
+        ParserFunctions: Handle &lt;refs&gt; inside {{#tag}} (affects incorrectly placed ref on 1 en.w page); EX:{{#tag:ref|&lt;ref&gt;a&lt;/ref&gt;b}}. See: <a href="/site/en.wikipedia.org/wiki/UK">https://en.wikipedia.org/wiki/UK</a> <a href="https://en.wikisource.org/wiki/The_Canterville_Ghost" rel="nofollow" class="external free">https://en.wikisource.org/wiki/The_Canterville_Ghost</a>
       </li>
       <li>
         ParserFunctions: Add {{REVISIONSIZE}} (affects script error on 2 ru.w pages); EX:{{REVISIONSIZE}}. See: <a href="https://ru.wikipedia.org/wiki/Юршор" rel="nofollow" class="external free">https://ru.wikipedia.org/wiki/Юршор</a> <a href="https://ru.wikipedia.org/wiki/Красноярск" rel="nofollow" class="external free">https://ru.wikipedia.org/wiki/Красноярск</a>
