--- a/home/wiki/Change_log/v3.10.4.1.html
+++ b/home/wiki/Change_log/v3.10.4.1.html
@@ -95,7 +95,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Implement entity for renderSnak.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/Montenegro">https://en.wikivoyage.org/wiki/Montenegro</a> <a href="/site/en.wikivoyage.org/wiki/Mongolia">https://en.wikivoyage.org/wiki/Mongolia</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Montenegro" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Montenegro</a> <a href="https://en.wikivoyage.org/wiki/Mongolia" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Mongolia</a>
       </dd>
     </dl>
     <ul>
@@ -108,7 +108,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Hide markup from mapframe / maplink tags.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/London">https://en.wikivoyage.org/wiki/London</a> <a href="/site/en.wikivoyage.org/wiki/Paris">https://en.wikivoyage.org/wiki/Paris</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/London" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/London</a> <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a>
       </dd>
     </dl>
     <ul>
@@ -152,7 +152,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Reuse quantity.unit code for renderSnake.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/Mongolia">https://en.wikivoyage.org/wiki/Mongolia</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Mongolia" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Mongolia</a>
       </dd>
     </dl>
     <ul>
@@ -165,7 +165,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Ignore assessment function tag.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/Mongolia">https://en.wikivoyage.org/wiki/Mongolia</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Mongolia" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Mongolia</a>
       </dd>
     </dl>
     <ul>
@@ -178,7 +178,7 @@
         <span style='font-variant:small-caps'>Example</span>: category={{{2}}}.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a>
       </dd>
     </dl>
     <ul>
@@ -188,7 +188,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a>
       </dd>
     </dl>
     <ul>
@@ -237,7 +237,7 @@
         <span style='font-variant:small-caps'>Example</span>: Armenica_Ani_map.gif/250px.png.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/Ani">https://en.wikivoyage.org/wiki/Ani</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Ani" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Ani</a>
       </dd>
     </dl>
     <ul>
@@ -265,7 +265,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikibooks.org/wiki/Algorithms">https://en.wikibooks.org/wiki/Algorithms</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikibooks.org/wiki/Algorithms" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/Algorithms</a>
       </dd>
     </dl>
     <ul>
@@ -275,7 +275,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki/Egypt" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Egypt</a> <a href="https://en.wikinews.org/wiki/Template:Topic_cat/latest" rel="nofollow" class="external free">https://en.wikinews.org/wiki/Template:Topic_cat/latest</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/Egypt">https://en.wikinews.org/wiki/Egypt</a> <a href="/site/en.wikinews.org/wiki/Template:Topic_cat/latest">https://en.wikinews.org/wiki/Template:Topic_cat/latest</a>
       </dd>
     </dl>
     <ul>
