--- a/home/wiki/Change_log/v3.11.2.1.html
+++ b/home/wiki/Change_log/v3.11.2.1.html
@@ -218,7 +218,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: If {{#pagebanner}} and __TOC__ are on same page, do not have __TOC__ overwrite {{#pagebanner}}.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/UNESCO_World_Heritage_List">https://en.wikivoyage.org/wiki/UNESCO_World_Heritage_List</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/UNESCO_World_Heritage_List" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/UNESCO_World_Heritage_List</a>
       </dd>
     </dl>
     <ul>
@@ -231,7 +231,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Always reload page when going back / forward on wikinews (do not use cached html).
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikinews.org/wiki" rel="nofollow" class="external free">https://en.wikinews.org/wiki</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikinews.org/wiki/">https://en.wikinews.org/wiki</a>
       </dd>
     </dl>
     <ul>
