--- a/home/wiki/Change_log/v3.6.4.1.html
+++ b/home/wiki/Change_log/v3.6.4.1.html
@@ -219,7 +219,7 @@
         <span style='font-variant:small-caps'>Example</span>: key="a'b" x&gt; key="a".
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikisource.org/wiki/The_formative_period_in_Colby%27s_history">https://en.wikisource.org/wiki/The_formative_period_in_Colby's_history</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikisource.org/wiki/The_formative_period_in_Colby's_history" rel="nofollow" class="external free">https://en.wikisource.org/wiki/The_formative_period_in_Colby's_history</a>
       </dd>
     </dl>
     <ul>
