--- a/home/wiki/Change_log/v3.7.3.1.html
+++ b/home/wiki/Change_log/v3.7.3.1.html
@@ -122,7 +122,7 @@
     </ul>
     <dl>
       <dd>
-        Links: <a href="/site/en.wikivoyage.org/wiki/Paris">https://en.wikivoyage.org/wiki/Paris</a>
+        Links: <a href="https://en.wikivoyage.org/wiki/Paris" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Paris</a>
       </dd>
     </dl>
     <p>
