--- a/home/wiki/Change_log/v3.8.1.1.html
+++ b/home/wiki/Change_log/v3.8.1.1.html
@@ -112,7 +112,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Support "renderSnak".
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikivoyage.org/wiki/Wikivoyage:Travellers%27_pub">https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub" rel="nofollow" class="external free">https://en.wikivoyage.org/wiki/Wikivoyage:Travellers'_pub</a>
       </dd>
     </dl>
     <h3>
