--- a/home/wiki/Change_log/v3.9.4.1.html
+++ b/home/wiki/Change_log/v3.9.4.1.html
@@ -132,7 +132,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikibooks.org/wiki/Subject:XML">https://en.wikibooks.org/wiki/Subject:XML</a> <a href="/site/en.wikibooks.org/wiki/Subject:Religion">https://en.wikibooks.org/wiki/Subject:Religion</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikibooks.org/wiki/Subject:XML" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/Subject:XML</a> <a href="https://en.wikibooks.org/wiki/Subject:Religion" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/Subject:Religion</a>
       </dd>
     </dl>
     <ul>
