--- a/home/wiki/Change_log/v4.6.0.1903.html
+++ b/home/wiki/Change_log/v4.6.0.1903.html
@@ -601,7 +601,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Treat keywords as caption if not File namespace or if keyless.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikibooks.org/wiki/C_Sharp_Programming">https://en.wikibooks.org/wiki/C_Sharp_Programming</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikibooks.org/wiki/C_Sharp_Programming" rel="nofollow" class="external free">https://en.wikibooks.org/wiki/C_Sharp_Programming</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/303" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/303</a>
