--- a/home/wiki/Change_log/v4.6.2.1907.html
+++ b/home/wiki/Change_log/v4.6.2.1907.html
@@ -414,7 +414,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Terminate comment if new-line found.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikisource.org/wiki/Three_Villages/2_Shirley">https://en.wikisource.org/wiki/Three_Villages/2_Shirley</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikisource.org/wiki/Three_Villages/2_Shirley" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Three_Villages/2_Shirley</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/437" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/437</a>
