--- a/home/wiki/Change_log/v4.6.5.1911.html
+++ b/home/wiki/Change_log/v4.6.5.1911.html
@@ -363,7 +363,7 @@
         <span style='font-variant:small-caps'>Resolved by</span>: Ignore follow items when writing primary reference.
       </dd>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="/site/en.wikisource.org/wiki/Page:Writings_of_Saint_Patrick,_Apostle_of_Ireland.djvu/154">https://en.wikisource.org/wiki/Page:Writings_of_Saint_Patrick,_Apostle_of_Ireland.djvu/154</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="https://en.wikisource.org/wiki/Page:Writings_of_Saint_Patrick,_Apostle_of_Ireland.djvu/154" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Page:Writings_of_Saint_Patrick,_Apostle_of_Ireland.djvu/154</a>
       </dd>
       <dd>
         <span style='font-variant:small-caps'>Issue</span>: <a href="https://github.com/gnosygnu/xowa/issues/555" rel="nofollow" class="external free">https://github.com/gnosygnu/xowa/issues/555</a>
