--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -209,13 +209,13 @@
       </tr>
       <tr>
         <td>
-          en.wikibooks.org
+          en.wikinews.org
         </td>
         <td class='cell_center'>
           n
         </td>
         <td class='cell_center'>
-          2019-05-28
+          2019-11-01
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -233,13 +233,13 @@
           v1
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikibooks.org")'>Import</button>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikinews.org")'>Import</button>
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikibooks.org")'>Category</button>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikinews.org")'>Category</button>
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikibooks.org")'>Search</button>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikinews.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -285,7 +285,7 @@
           n
         </td>
         <td class='cell_center'>
-          2019-06-13
+          2019-11-01
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -314,37 +314,36 @@
       </tr>
       <tr>
         <td>
-          en.wikisource.org
+          en.wikispecies.org
         </td>
         <td class='cell_center'>
           n
         </td>
         <td class='cell_center'>
-          2019-08-19
+          1969-12-31
         </td>
         <td class='cell_center'>
-          2017-03-20
         </td>
         <td class='cell_center'>
-          Dump complete
+          &lt;&lt;NULL&gt;&gt;
         </td>
         <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
+          xdat
         </td>
         <td class='cell_center'>
           v1
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikisource.org")'>Import</button>
+          v2
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikisource.org")'>Category</button>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikispecies.org")'>Import</button>
         </td>
         <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikisource.org")'>Search</button>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikispecies.org")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikispecies.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -355,7 +354,7 @@
           n
         </td>
         <td class='cell_center'>
-          2019-03-03
+          2019-11-01
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -380,41 +379,6 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikiversity.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          en.wikivoyage.org
-        </td>
-        <td class='cell_center'>
-          n
-        </td>
-        <td class='cell_center'>
-          2019-11-01
-        </td>
-        <td class='cell_center'>
-          2017-03-20
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          sqlite3
-        </td>
-        <td class='cell_center'>
-          v0
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikivoyage.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("en.wikivoyage.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikivoyage.org")'>Search</button>
         </td>
       </tr>
       <tr>
