--- a/home/wiki/Dev/SWT.html
+++ b/home/wiki/Dev/SWT.html
@@ -99,7 +99,7 @@
         Printing was not available. See: <a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=376358" rel="nofollow" class="external free">https://bugs.eclipse.org/bugs/show_bug.cgi?id=376358</a>
       </li>
       <li>
-        A very small minority of pages would not render the same as a browser. For example, <a href="/site/en.wikisource.org/wiki/Lubbers_Don%27t_Live">https://en.wikisource.org/wiki/Lubbers_Don't_Live</a>!
+        A very small minority of pages would not render the same as a browser. For example, <a href="https://en.wikisource.org/wiki/Lubbers_Don't_Live" rel="nofollow" class="external free">https://en.wikisource.org/wiki/Lubbers_Don't_Live</a>!
       </li>
     </ul>
   
