--- a/home/wiki/App/Xtn/Browser/HTTP_Server.html
+++ b/home/wiki/App/Xtn/Browser/HTTP_Server.html
@@ -67,6 +67,66 @@
       </li>
     </ul>
     <h2>
+      <span class="mw-headline" id="Advanced">Advanced</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="Disabling_Specials_such_as_XowaCfg">Disabling Specials such as XowaCfg</span>
+    </h3>
+    <p>
+      Launch xowa_server with a command-line flag of <code>http_server.special_pages_safelist</code> and list the Specials you want to keep.
+    </p>
+    <p>
+      For example:
+    </p>
+<pre>
+java -jar xowa_linux_64.jar --root_dir /xowa/ --show_license n --show_args n --app_mode http_server --http_server.special_pages_safelist "Random|XowaSearch|AllPages"
+</pre>
+    <p>
+      This will disable <b>ALL</b> specials except for the following:
+    </p>
+    <ul>
+      <li>
+        <a href="http://xowa.org/home/wiki/Special:Random" id="xolnki_3" title="Special:Random">Random</a>
+      </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Special:XowaSearch" id="xolnki_4" title="Special:XowaSearch">XowaSearch</a>
+      </li>
+      <li>
+        <a href="http://xowa.org/home/wiki/Special:AllPages%3Ffrom%3DA" id="xolnki_5" title="Special:AllPages?from=A">AllPages</a>
+      </li>
+    </ul>
+    <h3>
+      <span class="mw-headline" id="Disabling_Edit_Page">Disabling Edit Page</span>
+    </h3>
+    <p>
+      Modify the <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.html.css" id="xolnki_6" title="Special:XowaCfg?grp=xowa.html.css">Special:XowaCfg?grp=xowa.html.css</a> page by hiding the edit div.
+    </p>
+    <p>
+      Specifically:
+    </p>
+    <ul>
+      <li>
+        Go to <a href="http://xowa.org/home/wiki/Special:XowaCfg%3Fgrp%3Dxowa.html.css" id="xolnki_7" title="Special:XowaCfg?grp=xowa.html.css">Special:XowaCfg?grp=xowa.html.css</a>
+      </li>
+      <li>
+        Enter in the following within the <code>Custom</code> -&gt; <code>CSS</code> box
+      </li>
+    </ul>
+<pre>
+#editform{display:none}
+</pre>
+    <ul>
+      <li>
+        Save the change by closing the tab or by clicking on a different option (you'll see a check mark icon followed by an undo option)
+      </li>
+      <li>
+        Start http_server and try to go to an <a href="http://xowa.org/home/wiki/Main_Page%3Faction%3Dedit" id="xolnki_8" title="Main Page?action=edit" class="xowa-visited">edit page</a>. It will be blank
+      </li>
+    </ul>
+    <p>
+      You can try to hide other elements based on the HTML fragment within <code>page_edit</code> in the <code>/xowa/bin/any/xowa/cfg/app/xowa.gfs</code> file
+    </p>
+    <h2>
       <span class="mw-headline" id="Notes">Notes</span>
     </h2>
     <ol class="references">
