--- a/home/wiki/Dashboard/Import/Online.html
+++ b/home/wiki/Dashboard/Import/Online.html
@@ -297,7 +297,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('en.wikisource.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/en.wikisource.org/wiki/">http://en.wikisource.org</a>
+          <a href="http://en.wikisource.org" rel="nofollow" class="external free">http://en.wikisource.org</a>
         </td>
         <td>
           English
@@ -323,7 +323,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('en.wikibooks.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/en.wikibooks.org/wiki/">http://en.wikibooks.org</a>
+          <a href="http://en.wikibooks.org" rel="nofollow" class="external free">http://en.wikibooks.org</a>
         </td>
         <td>
           English
@@ -401,7 +401,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('en.wikinews.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="http://en.wikinews.org" rel="nofollow" class="external free">http://en.wikinews.org</a>
+          <a href="/site/en.wikinews.org/wiki/">http://en.wikinews.org</a>
         </td>
         <td>
           English
@@ -427,7 +427,7 @@
           <a href="xowa-cmd:app.setup.cmds.dump_add_many('en.wikivoyage.org'%2C%20'latest'%2C%20'pages-articles'%2C%20'wiki.custom').owner.run;">download<img src="file:///C:/xowa/bin/any/xowa/file/app.general/xowa_exec.png"></a>
         </td>
         <td>
-          <a href="/site/en.wikivoyage.org/wiki/">http://en.wikivoyage.org</a>
+          <a href="http://en.wikivoyage.org" rel="nofollow" class="external free">http://en.wikivoyage.org</a>
         </td>
         <td>
           English
